--- a/animals.html
+++ b/animals.html
@@ -39,18 +39,72 @@
     <p> After obserbing the out comes of the above codez.The animal roe is breaking first because we have uesd col-md for the animals row.It means column medium.if we use col-md coloumn will move horizontal,the size is less than 768px.if we use col-sm-2 is a small column.the letter will breakes when the size is less than 576px.so when we start decreasing the animal row will convert into vertical.so this is the reason the animal row will first convert into vertical. </p>
 
     <div class="container">
-    <img src="pinscher.jpg" class="img-fluid" alt="pinscher image" height="400" width="400">
-    <img src="Nile Crocodile.jpg" class="img-fluid" alt="crocodile image height="400" width="400">
-    <img src="tiger.jpg" class="img-fluid" alt="tiger image" height="400" width="400">
+    <img src="images/Nile Crocodile.jpg" class="img-fluid" alt="pinscher image" height="400" width="400">
+    <img src="images/pinscher.jpg" class="img-fluid" alt="crocodile image height="400"  width="400">
+    <img src="images/tiger.jpg" class="img-fluid" alt="tiger image" height="400" width="400">
   </div>
 
   <div class="container">
-    <img src="pinscher.jpg" class="img-thumbnail" alt="pinscher image" height="150" width="150">
-    <img src="Nile Crocodile.jpg" class="img-thumbnail" alt="crocodile image" height="150" width="150">
-    <img src="tiger.jpg" class="img-thumbnail" alt="tiger image" height="150" width="150">
+    <img src="images/Nile Crocodile.jpg" class="img-thumbnail" alt="pinscher image" height="150" width="150">
+    <img src="images/pinscher.jpg" class="img-thumbnail" alt="crocodile image" height="150" width="150">
+    <img src="images/tiger.jpg" class="img-thumbnail" alt="tiger image" height="150" width="150">
   </div>
 
+  <table class="table">
+    <caption>Letter,Animal,City,Car</caption>
+    <thead>
+      <tr>
+        <th scope="col">Letter</th>
+        <th scope="col">Animal</th>
+        <th scope="col">City</th>
+        <th scope="col">Car</th>
+      </tr>
 
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">G</th>
+        <td>German Pinscher</td>
+        <td>Grand Rapids</td>
+        <td>Gemballa</td>
+      </tr>
 
+      <tr>
+        <th scope="row">H</th>
+        <td>Harrier</td>
+        <td>Houston</td>
+        <td>Hyundai</td>
+      </tr>
+
+      <tr>
+        <th scope="row">A</th>
+        <td>Akita</td>
+        <td>Austin</td>
+        <td>ACURA</td>
+      </tr>
+
+      <tr>
+        <th scope="row">N</th>
+        <td>Nile Crocodile</td>
+        <td>New Delhi</td>
+        <td>Nissan</td>
+      </tr>
+
+      <tr>
+        <th scope="row">T</th>
+        <td>Tiger</td>
+        <td>Tulsa</td>
+        <td>Tesla</td>
+      </tr>
+
+      <tr>
+        <th scope="row">A</th>
+        <td>Akita</td>
+        <td>Allahabad</td>
+        <td>ADRENALINE</td>
+      </tr>
+
+    </tbody>
+  </table>
 </body>
 </html>
