--- a/animals.html
+++ b/animals.html
@@ -106,5 +106,30 @@
 
     </tbody>
   </table>
+
+    <div>
+      <button type="button" class="btn">G</button>
+      <button type="button" class="btn">H</button>
+      <button type="button" class="btn">A</button>
+      <button type="button" class="btn">N</button>
+      <button type="button" class="btn">T</button>
+      <button type="button" class="btn">A</button>
+    </div>
+
+    <div class="btn-toolbar">
+    <div class="btn-group" role="group" aria-label="First group">
+      <button type="button" class="btn btn-success">G</button>
+      <button type="button" class="btn btn-success">H</button>
+      <button type="button" class="btn btn-success">A</button>
+    </div>
+
+    <div class="btn-group" role="group" aria-label="Second group">
+      <button type="button" class="btn btn-warning">N</button>
+      <button type="button" class="btn btn-warning">T</button>
+    </div>
+
+    <div class="btn-group" role="group" aria-label="Third group">
+    <button type="button" class="btn btn-danger">A</button>
+
 </body>
 </html>
