--- a/animals.html
+++ b/animals.html
@@ -130,6 +130,9 @@
 
     <div class="btn-group" role="group" aria-label="Third group">
     <button type="button" class="btn btn-danger">A</button>
+    </div>
+    </div>
+    
 
 </body>
 </html>
