--- a/animals.html
+++ b/animals.html
@@ -136,21 +136,24 @@
   </table>
 
     <div class="btn-toolbar">
-    <div class="btn-group" role="group" aria-label="First group">
+    <div class="btn-group me-2" role="group" aria-label="First group">
       <button type="button" class="btn btn-success">G</button>
       <button type="button" class="btn btn-success">H</button>
       <button type="button" class="btn btn-success">A</button>
     </div>
 
-    <div class="btn-group" role="group" aria-label="Second group">
+    <div class="btn-group me-2" role="group" aria-label="Second group">
       <button type="button" class="btn btn-warning">N</button>
       <button type="button" class="btn btn-warning">T</button>
     </div>
+    <br>
 
-    <div class="btn-group" role="group" aria-label="Third group">
+    <div class="btn-group me-2" role="group" aria-label="Third group">
     <button type="button" class="btn btn-danger">A</button>
     </div>
     </div>
+    <br>
+    <br>
 
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
@@ -163,5 +166,23 @@
       
       </ul>
       </div>
+      <br>
+      <br>
+      <form>
+  <div class="mb-3">
+    <label for="exampleInputEmail1" class="form-label">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+  </div>
+  <div class="mb-3">
+    <label for="Animal" class="form-label">Enter the animal</label>
+    <input type="text" class="form-control" >
+  </div>
+  <div class="mb-3 form-check">
+    <input type="checkbox" class="form-check-input" >
+    <label class="form-check-label" for="exampleCheck1">Sign up for newsletter?</label>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
 </body>
 </html>
