--- a/animals.html
+++ b/animals.html
@@ -31,7 +31,7 @@
             </li> 
             <li class="nav-item dropdown">
               <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Select page
+                Drop down
               </a>
             
               <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -68,7 +68,7 @@
 
     <div class="container">
     <img src="images/Nile Crocodile.jpg" class="img-fluid" alt="pinscher image" height="400" width="400">
-    <img src="images/pinscher.jpg" class="img-fluid" alt="crocodile image height="400"  width="400">
+    <img src="images/pinscher.jpg" class="img-fluid" alt="crocodile" image height="400"  width="400">
     <img src="images/tiger.jpg" class="img-fluid" alt="tiger image" height="400" width="400">
   </div>
 
@@ -157,7 +157,7 @@
 
     <div class="dropdown">
       <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-        Select page
+        Drop down
       </a>
     
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
