--- a/animals.html
+++ b/animals.html
@@ -79,7 +79,7 @@
   </div>
 
   <table class="table">
-    <caption>Letter,Animal,City,Car</caption>
+    <caption style="caption-side: top">Letter,Animal,City,Car</caption>
     <thead>
       <tr class ="bg-dark text-white">
         <th scope="col">Letter</th>
@@ -118,7 +118,7 @@
         <td>Nissan</td>
       </tr>
 
-      <tr class ="bg-warning text-white"></trclass>>
+      <tr class ="bg-warning text-white"></trclass>
         <th scope="row">T</th>
         <td>Tiger</td>
         <td>Tulsa</td>
@@ -184,5 +184,14 @@
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
+<div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
 </body>
 </html>
