--- a/animals.html
+++ b/animals.html
@@ -134,6 +134,15 @@
     </tbody>
   </table>
 
+  <div>
+    <button type="button" class="btn">G</button>
+    <button type="button" class="btn">H</button>
+    <button type="button" class="btn">A</button>
+    <button type="button" class="btn">N</button>
+    <button type="button" class="btn">T</button>
+    <button type="button" class="btn">A</button>
+  </div>
+
     <div class="btn-toolbar">
     <div class="btn-group me-2" role="group" aria-label="First group">
       <button type="button" class="btn btn-success">G</button>
